# HW-Scoring-API-testing

./: README.md  pyproject.toml
.github/workflows/: scoring-api-testing-ci.yml
src/: api.py  scoring.py  store.py
tests/: test_functional.py  test_unit.py
