[tool.poetry]
name = "hw-scoring-api-testing"
version = "0.1.0"
description = "This is a training project. Run it at your own risk."
authors = ["Andrey Denisov <andrey.denisov@indeed-id.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
retry = "^0.9.2"
redis = "^5.2.1"
fakeredis = "^2.26.2"
pre-commit = "^4.0.1"
ruff = "^0.8.2"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.13.0"
flakehell = "^0.9.0"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["F811"]

[[tool.mypy.overrides]]
module = ["untyped_package.*"]
follow_untyped_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
